fix: spacing, content and font-size

--- a/src/pages/landingPage/sections/showcase/showcase.module.css
+++ b/src/pages/landingPage/sections/showcase/showcase.module.css
@@ -136,7 +136,7 @@
   }
 
   .showcase_inner h1 {
-    font-size: 50px;
+    font-size: 40px;
     line-height: 61px;
   }
   .showcase_inner p {
