--- a/src/pages/landingPage/sections/story/story.module.css
+++ b/src/pages/landingPage/sections/story/story.module.css
@@ -27,12 +27,12 @@
 }
 
 .story_item_image {
-  width: 43% !important;
+  width: 45% !important;
   
 }
 
 .story_item_texts {
-  width: 40% !important;
+  width: 45% !important;
 }
 
 .story_item_texts p {
@@ -50,7 +50,7 @@
 .story_icon2 {
   position: absolute;
   top: -100px;
-  right: 45%;
+  right: 42%;
   width: 200px;
 }
 .story_icon_2 {
